--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                <div class="col-md-6">
                   <div class="message-box">
                      <h4>What We Do</h4>
-                     <h2>Clinic Service</h2>
+                     <h2>Medicare Service</h2>
                      <p class="lead">Appreciated among our customers across the nation for supplying, trading and wholesaling a board array of high effective Pharmaceutical Products, Ansh Medicare started its operation at Baddi, Solan, India. We engage in Pharma PCD, Pharma Franchise and Pharma contract manufacturing of pharma products.</p>
                      <p> Within a short span of time, we have established a strong market position and presence and our range varies from Tablets, Capsules, Injections, Ointments, Powders, syrups and soft gels, all our products are manufactured after complete market research and checking quality parameters from start till end.</p>
                      <a href="#services" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">Learn More</a>
