--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <header>
          <div class="header-top wow fadeIn">
             <div class="container">
-               <a class="navbar-brand" href="index.html"><img src="images/logo1.png" alt="image"></a>
+               <a class="navbar-brand" href="index.html"><img src="images/logo2.jpeg" alt="image"></a>
                <div class="right-header">
                   <div class="header-info">
                      <div class="info-inner">
